TEST_PROGRAMS/INVALID/anderson_santossilva/keywordAsId.min
#The keywords are also reserved words, meaning that that they can't be used to name variables.
#This wasn't specified but the reference compiler works this way. 
var while: string;
print while;

